# gol3d

./: .gitignore  BUGS  CMakeLists.txt  LICENSE  README.md  TODO  gol3d  keymap  main.cpp  patterns.txt  report.txt  stateDebug.txt
Debug/: gol3d
Release/: gol3d
cmake/: glfwConfig.cmake
cmake/windows/: FindGLEW.cmake  FindGLFW.cmake
glsl/: cursor.frag  skybox.frag  skybox.vert  world.frag  world.vert
include/: Application.h  Camera.h  CellularAutomaton.h  Cube.h  Framework.h  GeneralizedCellularAutomaton.h  IO.h  MenuSystem.h  Object.h  Rule.h  Skybox.h  TempName.h  User.h  World.h  cubeTypes.h  global.h  ivecHash.h  load_bmp.h  load_obj.h  load_shader.h  opengl-debug.h  utils.h
include/nlohmann/: json.hpp
python/: compute_rule_value.py  generate_rule.py  learn_rule_value.py  periodicity_tests.py  process_rules.py  rank_rules_by_value.py  visualize_cube_stats.py
src/: Application.cpp  Camera.cpp  CellularAutomaton.cpp  Cube.cpp  Framework.cpp  GeneralizedCellularAutomaton.cpp  IO.cpp  Object.cpp  Rule.cpp  Skybox.cpp  TempName.cpp  User.cpp  World.cpp  load_bmp.cpp  load_obj.cpp  load_shader.cpp  main.cpp  utils.cpp
src/glsl/: cursor.frag  cursor.vert  skybox.frag  world.frag  world.vert
src/python/: generate_rule.py
